Completed 4-links-scripts

--- a/week-1/4-links-scripts/index.html
+++ b/week-1/4-links-scripts/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylessheet" href="missing-styles.css" />
     <meta charset="utf-8" />
     <title>4. Adding Links and Scripts - HTML, CSS and Git Exercises</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
+    <script type="text/javascript" src="convertUrls.js"></script>
     <div class="site-wrapper">
       <div class="site-header">
         <div class="site-header__title">Messages</div>
