--- a/week-3/22-checkout/index.html
+++ b/week-3/22-checkout/index.html
@@ -38,6 +38,14 @@
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
             <!-- Add the form fields here -->
+            <label type="text" for="customer-name">Your name:</label>
+            <input type="text" name="customer-name" id="customer-name" />
+            <br />
+            <label type="text" for="customer-email">Your email:</label>
+            <input type="email" name="customer-email" id="customer-email" />
+            <br />
+            <label type="text" for="customer-phone">Your phone number:</label>
+            <input type="tel" name="customer-phone" id="customer-phone" />
 
             <button type="submit">Complete Purchase</button>
           </form>
