--- a/week-3/23-comments/index.html
+++ b/week-3/23-comments/index.html
@@ -32,6 +32,11 @@
           <p>Add your comments and let us know what you think!</p>
 
           <!-- Your comment form goes here -->
+          <form method="GET">
+            <label type="text" for="comment">comment here:</label>
+            <textarea name="comment" id="comment"></textarea>
+            <button type="submit">Send comment</button>
+          </form>
         </div>
       </main>
     </div>
