--- a/week-3/24-dietary/index.html
+++ b/week-3/24-dietary/index.html
@@ -20,6 +20,20 @@
 
         <form>
           <!-- Your multiple choice goes here -->
+
+          <fieldset>
+            <legend>Please select all of your dietary requirements</legend>
+            <label type="text"><input type="checkbox" />Halal</label><br />
+            <br />
+            <label type="text"><input type="checkbox" />Kosher</label><br />
+            <br />
+            <label type="text"><input type="checkbox" />Vegetarian</label><br />
+            <br />
+            <label type="text"><input type="checkbox" />Vegan</label><br />
+            <br />
+            <label type="text"><input type="checkbox" />Gluten free</label>
+          </fieldset>
+
           <button type="submit">Submit</button>
         </form>
       </main>
