--- a/week-3/26-checkout-groups/index.html
+++ b/week-3/26-checkout-groups/index.html
@@ -38,6 +38,28 @@
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
             <!-- Add the form fields here -->
+            <fieldset>
+              <legend>Billing Address</legend>
+              <label type="text">Adress Line 1<input type="text"/></label><br />
+              <br />
+              <label type="text">Address Line 2<input type="text"/></label><br />
+              <br />
+              <label type="text">Postcode<input type="text"/></label><br />
+              <br />
+              <label type="text">City<input type="text"/></label><br />
+              <br />
+            </fieldset>
+            <fieldset>
+              <legend>Delivery Address</legend>
+              <label type="text">Adress Line 1<input type="text"/></label><br />
+              <br />
+              <label type="text">Address Line 2<input type="text"/></label><br />
+              <br />
+              <label type="text">Postcode<input type="text"/></label><br />
+              <br />
+              <label type="text">City<input type="text"/></label><br />
+              <br />
+            </fieldset>
 
             <button type="submit">Complete Purchase</button>
           </form>
