finished-29-combined-skills

--- a/week-3/29-combined-skills/about.html
+++ b/week-3/29-combined-skills/about.html
@@ -52,6 +52,7 @@
       <main class="site-content">
         <article class="main-article">
           <h1>About C.Y.F</h1>
+
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra
@@ -118,12 +119,12 @@
       </main>
 
       <footer>
-        <p>
+        <p id="heart">
           <a
             href="https://github.com/coditech/Submissions/tree/master/Exercises/html-css-git-exercises"
             >Built</a
           >
-          with ♥ for <a href="https://codi.tech/">Codi</a>.
+          with <span id="heart">♥</span> for <a href="https://codi.tech/">Codi</a>.
         </p>
         <p>
           <svg
