--- a/week-3/29-combined-skills/index.html
+++ b/week-3/29-combined-skills/index.html
@@ -13,19 +13,21 @@
     <div class="site-wrapper">
       <div class="site-header">
         <h1 class="site-header__title">C.Y.F</h1>
-        <div class="main-nav">
-          <ul class="main-nav__list">
-            <li class="main-nav__list-item">
-              <a href="index.html">Latest</a>
-            </li>
-            <li class="main-nav__list-item">
-              <a href="about.html">About</a>
-            </li>
-            <li class="main-nav__list-item">
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
+        <nav class="nav">
+          <div class="main-nav">
+            <ul class="main-nav__list">
+              <li class="main-nav__list-item">
+                <a href="index.html">Latest</a>
+              </li>
+              <li class="main-nav__list-item">
+                <a href="about.html">About</a>
+              </li>
+              <li class="main-nav__list-item">
+                <a href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
         <form class="site-search" action="/search">
           <label for="search-input">
             Search
@@ -106,7 +108,7 @@
             href="https://github.com/coditech/Submissions/tree/master/Exercises/html-css-git-exercises"
             >Built</a
           >
-          with ♥ for <a href="https://codi.tech/">Codi</a>.
+          with <span id="heart">♥</span> for <a href="https://codi.tech/">Codi</a>.
         </p>
         <p>
           <svg
