--- a/week-3/29-combined-skills/contact.html
+++ b/week-3/29-combined-skills/contact.html
@@ -56,13 +56,35 @@
         <form method="GET" class="contact-form">
           <div class="contact-form__field">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" />
+            <input type="text" name="name" id="name" required />
           </div>
           <div class="contact-form__field">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" required />
+          </div>
+          <div class="contact-form__field">
+            <label for="message">Message</label>
             <textarea
               name="message"
               placeholder="Your message should not be longer than 200 words."
+              id="message"
+              required
             ></textarea>
+            <div class="contact-form__field">
+              <fieldset>
+                <legend>Please select you branch of interest</legend>
+                <label type="text"><input type="radio" name="branch" value="London" />London</label
+                ><br />
+                <br />
+                <label type="text"
+                  ><input type="radio" name="branch" value="Glasgow" />Glasgow</label
+                ><br />
+                <br />
+                <label type="text"
+                  ><input type="radio" name="branch" value="Manchester" />Manchester</label
+                ><br />
+              </fieldset>
+            </div>
           </div>
           <button type="submit">Send</button>
         </form>
@@ -74,7 +96,7 @@
             href="https://github.com/coditech/Submissions/tree/master/Exercises/html-css-git-exercises"
             >Built</a
           >
-          with ♥ for <a href="https://codi.tech/">Codi</a>.
+          with <span id="heart">♥</span> for <a href="https://codi.tech/">Codi</a>.
         </p>
         <p>
           <svg
